package hkt.services;

public class AudioService {
    private static final String SERVER_IP = "partii.aiforthai.in.th";
    private static final int SERVER_PORT = 27016;
    private String apiKey = "FJynzn96xnhxIuAPr3S7f2gjuiNODMk6";

    public byte[] recordAudio() {
        // Implement recording using Java Sound API
        return null;
    }

    public String convertToText(byte[] audioData) {
        // Use gRPC client to convert audio to text
        return executePartiiCommand(audioData);
    }

    private String executePartiiCommand(byte[] audioData) {
        // Execute partii-java.jar command
        return null;
    }
}